node editor (slider) draw glitch #43111

Closed
opened 2015-01-03 18:43:56 +01:00 by Ronny G · 6 comments

System Information
ubuntu 14.10, 630gt

Blender Version
Broken: 2.73RC

Exact steps for others to reproduce the error

open the blend file
look at the node group slider ;)

to reproduce the behavior change the min and max (in the group) to the same number

screenshot:

Screenshot_from_2015-01-03_14:19:55.png

blend:

facdrawglitch.blend

**System Information** ubuntu 14.10, 630gt **Blender Version** Broken: 2.73RC **Exact steps for others to reproduce the error** open the blend file look at the node group slider ;) to reproduce the behavior change the min and max (in the group) to the same number screenshot: ![Screenshot_from_2015-01-03_14:19:55.png](https://archive.blender.org/developer/F134959/Screenshot_from_2015-01-03_14_19_55.png) blend: [facdrawglitch.blend](https://archive.blender.org/developer/F134961/facdrawglitch.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ
Julian Eisel self-assigned this 2015-01-03 18:45:13 +01:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by e7a9bf88d2

This issue was referenced by e7a9bf88d2243bead0ed1b5f9db1f21aef7ea397
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit e7a9bf88d2.

Closed by commit e7a9bf88d2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43111
No description provided.